Se agregan OpenAPI annotations para login y logout
